<resources>
    <!---CREDENCIALES APLICATIVO-->
    <string name="app_name">proyect001</string>
    <string name="developer">Javier Apaza</string>
    <string name="desarrollo">desarrollado por: </string>
    <string name="version">version 1.0.0</string>
    <!---Login-->
    <string name="Titulo_Login">Ingrese Session</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese Usuario</string>
    <string name="lbl_contraseña">Contraseña</string>
    <string name="txt_password">Ingrese Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_crear_cuenta">No tienes cuenta?, Registrate</string>
    <!---Registro-->
    <string name="Titulo_Registro">Registrar cuenta</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="txt_nombre">Ingrese su nombre</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="txt_apellido">Ingrese su apellido</string>
    <string name="lbl_email">Correo electrónico</string>
    <string name="txt_email">Ingrese su correo electrónico</string>
    <string name="lbl_pass">Contraseña</string>
    <string name="txt_pass">Ingrese su contraseña</string>
    <string name="lbl_confirmar_password">Confirmar contraseña</string>
    <string name="txt_confirmar_password">Confirme su contraseña</string>
    <string name="btn_registrar">Registrar usuarior</string>
    <string name="lbl_ir_login">Volver al ingreso</string>

    <!--DASHBOARD-->

    <string name="bienvenido">Bienvenido</string>
    <string name="empresa">Empresa</string>
    <string name="gastos">Gastos</string>
    <string name="lista_tareas">Lista Tareas</string>
    <string name="tareas">Tareas</string>
    <string name="favoritos">Favoritos</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <!--mis datos-->
    <string name="correo_md">Correo usuario</string>
    <string name="codigo_md">Codigo usuario</string>
    <string name="titulo_md">Mis datos</string>
    <string name="datos_md">Datos:</string>
    <string name="leyenda_md">Todos los campos son requeridos</string>
    <string name="nombre_md">Nombres</string>
    <string name="apellido_md">Apellidos</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="edad_md">Edad</string>
    <string name="telefono_md">Telefono</string>
    <string name="domicilio_md">Domicilio</string>
    <string name="tiktok_md">Tiktok</string>
    <string name="profesion_md">Profesion</string>

    <string name="descripcion_dev">
    Soy un programador con las siguientes habilidades y cualidades:
    Poseo habilidades comunicativas.
    Habilidad para trabajar en equipo y evitar conflictos.
    Soy lógico y analítico.
    Creativo y ocurrente.
    Ser organizado y poder planificar tareas y utilizar eficientemente mi tiempo.
    Poseo la capacidad de planear, diseñar, evaluar, controlar, instalar, integrar,
            construir, operar, administrar, y mantener sistemas que contemplen los sistemas
            de software y todo lo relacionado con el ambiente computacional,
            buscando el óptimo aprovechamiento.
    </string>

    <!-- ITEM CLIENTE -->
    <string name="id_cliente_item">Id Cliente</string>
    <string name="uid_cliente">Uid Cliente</string>
    <string name="nombre_cliente_item">Nombre</string>
    <string name="apellido_cliente_item">Apellidos</string>
    <string name="correo_cliente_item">Correo</string>
    <string name="dni_cliente_item">DNI</string>
    <string name="telefono_cliente_item">Teléfono</string>
    <string name="direccion_cliente_item">Dirección</string>

    <!-- AGREGAR CLIENTE -->
    <string name="registrar_cli">Registrar Cliente</string>
    <string name="vid_usuario">Mi UID</string>
    <string name="nombre_cli">Nombres Clientes</string>
    <string name="apellidos_cli">Apellidos Clientes</string>
    <string name="correo_cli">Correo</string>
    <string name="dni_cli">DNI</string>
    <string name="telefono_cli">Teléfono</string>
    <string name="direccion_cli">Dirección</string>


</resources>
