<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo4"
    tools:context=".Registro1Activity"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo_Registro"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="plataforma.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="false">
        </com.airbnb.lottie.LottieAnimationView>

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:background="@drawable/pato"
            android:contentDescription="Foto de perfil" />

        <Button
            android:id="@+id/btnSeleccionarImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Seleccionar Imagen"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/lbl_nombre"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombre"
                android:inputType="text"
                android:padding="15dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/lbl_apellido"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etapellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_apellido"
                android:inputType="text"
                android:padding="15dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de correo -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/lbl_email"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de contraseña -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/lbl_pass"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:padding="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de confirmar contraseña -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/lbl_confirmar_password"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etconfirmar_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_confirmar_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnregistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrar"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnvolverlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#5353ec"
            android:text="@string/lbl_ir_login"
            android:background="@android:color/transparent" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
