<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <!-- Título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_cli"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"/>

        <!-- Animación Lottie -->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnim"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_fileName="user.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true"/>

        <!-- UID Usuario -->
        <TextView
            android:id="@+id/tvidCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vid_usuario"
            android:textSize="18sp"
            android:gravity="center"/>

        <!-- Nombre del Cliente -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/tvnombrel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person"
                android:hint="@string/nombre_cli"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Apellidos del Cliente -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/tvapellidol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person"
                android:hint="@string/apellidos_cli"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Correo -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/tvcorreoclientel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/atsimbol"
                android:hint="@string/correo_cli"
                android:drawablePadding="15dp"
                android:inputType="textEmailAddress"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- DNI -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/tvdniclientel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/card"
                android:hint="@string/dni_cli"
                android:drawablePadding="15dp"
                android:inputType="number"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Teléfono -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/tvtelefonoclientel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/phone"
                android:hint="@string/telefono_cli"
                android:drawablePadding="15dp"
                android:inputType="phone"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Dirección -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/tvdireccionclientel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/home"
                android:hint="@string/direccion_cli"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Guardar -->
        <Button
            android:id="@+id/btnguardarcliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar"
            android:padding="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>